--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
 <body>
   <div class="gallery">
     <!-- Добавьте свои изображения (желательно разных пропорций) -->
-    <img src="images/image1.jpg" alt="Пример 1">
-    <img src="images/image2.png" alt="Пример 2">
-    <img src="images/image3.jpg" alt="Пример 3">
-    <img src="images/image4.png" alt="Пример 4">
-    <img src="images/image5.jpg" alt="Пример 5">
-    <img src="images/image6.jpg" alt="Пример 6">
+    <img src="images/1024x768.png" alt="Пример 1">
+    <img src="images/970x250.gif" alt="Пример 2">
+    <img src="images/970x90.gif" alt="Пример 3">
+    <img src="images/768x1024.png" alt="Пример 4">
+    <img src="images/728x90.gif" alt="Пример 5">
+    <img src="images/336x280.gif" alt="Пример 6">
+    <img src="images/320x250.gif" alt="Пример 6">
+    <img src="images/320x100.gif" alt="Пример 6">
+    <img src="images/320x50.gif" alt="Пример 6">
+    <img src="images/300x600.gif" alt="Пример 6">
+    <img src="images/300x500.gif" alt="Пример 6">
+    <img src="images/300x300.gif" alt="Пример 6">
+     <img src="images/240x400.gif" alt="Пример 6">
+     <img src="images/160x600.gif" alt="Пример 6">
+    
   </div>
 </body>
 </html>
