--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
   <div class="gallery">
     <!-- Добавьте свои изображения (желательно разных пропорций) -->
-    <img src="images/1024x768.png" alt="Пример 1">
+    <img src="images/1024x768.jpg" alt="Пример 1">
     <img src="images/970x250.gif" alt="Пример 2">
     <img src="images/970x90.gif" alt="Пример 3">
-    <img src="images/768x1024.png" alt="Пример 4">
+    <img src="images/768x1024.jpg" alt="Пример 4">
     <img src="images/728x90.gif" alt="Пример 5">
     <img src="images/336x280.gif" alt="Пример 6">
     <img src="images/320x250.gif" alt="Пример 6">
